# idt

./: .gitignore  .goreleaser.yaml  .pinact.yaml  .semgrepignore  AGENTS.md  CONTRIBUTING.md  COPYING  Cargo.toml  Dockerfile  README.md  SECURITY.md  codecov.yml  deny.toml  flake.nix
.github/: CODEOWNERS  dependabot.yml  requirements.semgrep.txt
.github/workflows/: ci.yml  docs.yml  fuzz.yml  octoscan.yml  release.yml  scorecard.yml  zizmor.yml
assets/: demo.tape
benches/: benchmarks.rs
crates/idt-wasm/: Cargo.toml
crates/idt-wasm/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md  playground.md  quickstart.md
docs/src/appendix/: comparison-table.md  encoding-formats.md
docs/src/commands/: README.md  compare.md  convert.md  gen.md  info.md  inspect.md  sort.md  validate.md
docs/src/examples/: README.md  conversion.md  generation.md  inspection.md  json-output.md  scripting.md
docs/src/id-types/: README.md  assigned-ids.md  nanoid.md  others.md  snowflake.md  ulid.md  uuid.md
docs/src/playground/: playground.css  playground.js
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_parse_id/: cuid  ksuid  nanoid  objectid  tsid  typeid  ulid  uuid_no_dashes  xid
fuzz/corpus/fuzz_parse_id_with_hint/: crash-de54b99d137f1a4c63f9bf53d28dd0e710b296be
fuzz/fuzz_targets/: fuzz_detect.rs  fuzz_parse_id.rs  fuzz_parse_id_with_hint.rs  fuzz_roundtrip.rs
scripts/: build-wasm.sh
src/: lib.rs  main.rs
src/cli/: app.rs  mod.rs  output.rs
src/cli/commands/: compare.rs  completions.rs  convert.rs  generate.rs  info.rs  inspect.rs  manpage.rs  mod.rs  sort.rs  validate.rs
src/core/: detection.rs  encoding.rs  error.rs  id.rs  mod.rs
src/ids/: asin_id.rs  cuid2_id.rs  cuid_id.rs  ean13_id.rs  ean8_id.rs  gtin14_id.rs  isbn10_id.rs  isbn13_id.rs  isin_id.rs  ismn_id.rs  isni_id.rs  issn_id.rs  ksuid_id.rs  mod.rs  nanoid_id.rs  objectid_id.rs  shortuuid_id.rs  snowflake_id.rs  tsid_id.rs  typeid_id.rs  ulid_id.rs  upca_id.rs  uuid_id.rs  xid_id.rs
src/utils/: check_digit.rs  mod.rs
