[package]
name = "idt"
version = "0.1.9"
edition = "2024"
description = "A fast, ergonomic CLI tool for working with various ID formats"
authors = ["Seonghyeon Cho"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sh-cho/idt"
documentation = "https://sh-cho.github.io/idt"
keywords = ["uuid", "ulid", "id", "cli", "generator"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.93.0"

[workspace]
members = [".", "crates/idt-wasm"]

[lib]
name = "idt"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "idt"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clap_complete", "dep:clap_mangen", "dep:colored"]
wasm = ["chrono/wasmbind", "uuid/js"]

[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "string"], optional = true }
clap_complete = { version = "4", optional = true }
clap_mangen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "serde"] }
ulid = "1"
nanoid = "0.4"
chrono = { version = "0.4", default-features = false, features = ["now", "clock", "serde"] }
base64 = "0.22"
base32 = "0.5"
bs58 = "0.5"
hex = "0.4"
thiserror = "2"
colored = { version = "3", optional = true }
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.release]
publish = false
tag-name = "{{prefix}}{{version}}"  # remove v
