[package]
name = "idt-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.idt]
path = ".."

[[bin]]
name = "fuzz_parse_id"
path = "fuzz_targets/fuzz_parse_id.rs"
doc = false

[[bin]]
name = "fuzz_parse_id_with_hint"
path = "fuzz_targets/fuzz_parse_id_with_hint.rs"
doc = false

[[bin]]
name = "fuzz_detect"
path = "fuzz_targets/fuzz_detect.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[workspace]
members = ["."]
