[package]
name = "idt-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
idt = { path = "../..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde_json = "1"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
